--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+
+
+@import url('https://fonts.googleapis.com/css?family=Codystar');
+
 .logo{
 	width: 150px;
 	margin-left: 30px;
+    text-align: center;
 }
 
 #test{
@@ -11,9 +16,7 @@
 }
 
 nav{
-
-	font-family: 'Raleway Dots,' cursive;
-	font-family: 'Codystar', cursive;
+	font-family: 'Codystar', 'san-serif';
 }
 
 ul{
@@ -55,4 +58,38 @@ ul a{
 	text-align: center;
 	padding: 20px 0;
 	font-size: 30px;
+}
+
+
+.column {
+	float: left;
+	width: 48%;
+	margin-top: 20px;
+	padding: 0 10px;
+}
+
+.row {
+    margin: 0 -5px;
+}
+
+.row:after{
+	content: "";
+	display: table;
+	clear: both;
+}
+
+@media screen and (max-width: 600px){
+	.column{
+		width:100%;
+		display: block;
+		margin-bottom: 20px;
+	}
+}
+
+.card {
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	padding: 16px;
+	text-align: center;
+	background-color: #f1f1f1;
+    height: 455px;;
 }
