--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ ul a{
 	padding:30px;
 }
 
-.grid-container > div{
+.grid-container{
 	background-color: rgba(255,255,255,0.8);
 	text-align: center;
 	padding: 20px 0;
@@ -93,3 +93,29 @@ ul a{
 	background-color: #f1f1f1;
     height: 455px;;
 }
+
+ P { text-align: center }
+H2 { text-align: center }
+H1 { text-align: center }
+H3 { text-align: center }
+
+P.blocktext {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50em
+}
+
+IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
+
+
+ .center {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
+span {background-color: #ffbaeb;
+}
+
